# esp32_cpp_basic_library

./: readme.md
Console/: CMakeLists.txt  Console.cpp  idf_component.yml  readme.md
Console/examples/console_sdcard_example/: sdkconfig
Console/include/: Console.h
Credentials/: CMakeLists.txt  Credentials.cpp  idf_component.yml  readme.md
Credentials/include/: Credentials.h
FileStream/: CMakeLists.txt  FileStream.cpp  readme.md
FileStream/include/: FileStream.h
Gpio/: Button.cpp  CMakeLists.txt  Gpio.cpp  Led.cpp  readme.md
Gpio/examples/gpio_button/main/: idf_component.yml
Gpio/examples/gpio_button/main/Src/: main.cpp
Gpio/examples/gpio_button_example/main/: CMakeLists.txt  idf_component.yml
Gpio/examples/gpio_button_example/main/Inc/: main.h
Gpio/examples/gpio_led/: partitions.csv  readme.md
Gpio/examples/gpio_led/main/: idf_component.yml
Gpio/examples/gpio_led/main/Inc/: main.h
Gpio/examples/gpio_led/main/Src/: main.cpp
Gpio/include/: Button.h  Gpio.h  Led.h
MyFatfs/: CMakeLists.txt  MyFatfs.cpp  readme.md
MyFatfs/examples/fatfs_copynln_example/: CMakeLists.txt  partitions.csv
MyFatfs/examples/fatfs_copynln_example/main/: CMakeLists.txt  idf_component.yml
MyFatfs/examples/fatfs_copynln_example/main/Src/: main.cpp
MyFatfs/examples/fatfs_dir_example/: sdkconfig
MyFatfs/examples/fatfs_handling_dir_example/: sdkconfig.defaults
MyFatfs/examples/fatfs_handling_dir_example/main/: CMakeLists.txt  idf_component.yml
MyFatfs/examples/fatfs_handling_dir_example/main/Inc/: main.h
MyFatfs/examples/fatfs_handling_dir_example/main/Src/: main.cpp
MyFatfs/examples/fatfs_readln_example/: sdkconfig
MyFatfs/include/: MyFatfs.h
MySpiffs/: CMakeLists.txt  idf_component.yml  mySpiffs.cpp  readme.md
MySpiffs/examples/spiffs_copynln_example/: sdkconfig  sdkconfig.defaults
MySpiffs/examples/spiffs_example/: sdkconfig  sdkconfig.defauts
MySpiffs/examples/spiffs_printnln_example/: partitions.csv  sdkconfig
MySpiffs/examples/spiffs_readln_example/main/: CMakeLists.txt  idf_component.yml
MySpiffs/examples/spiffs_readln_example/main/Inc/: main.h
MySpiffs/examples/spiffs_readln_example/main/Src/: main.cpp
MySpiffs/include/: mySpiffs.h
Nvs32/: CMakeLists.txt  Nvs32.cpp  readme.md
Nvs32/include/: Nvs32.h
Sdcard/: Sdcard.cpp  idf_component.yml  readme.md
Sdcard/examples/sdcard_handling_dir_example/: esp_data_type.txt
Sdcard/examples/sdcard_handling_file_example/: sdkconfig
Sdcard/examples/sdcard_readln_example/components/Scard/: CMakeLists.txt  Sdcard.cpp
Sdcard/examples/sdcard_readln_example/components/Scard/include/: Sdcard.h
Sdcard/include/: Sdcard.h
Smartcfg/: CMakeLists.txt  Smartcfg.cpp  readme.md
Smartcfg/include/: Smartcfg.h
Sntp/: CMakeLists.txt  SntpTime.cpp  readme.md
Sntp/examples/sntp_example/main/: CMakeLists.txt  idf_component.yml
Sntp/examples/sntp_example/main/Inc/: main.h
Sntp/examples/sntp_example/main/Src/: main.cpp
Sntp/include/: SntpTime.h
Uart/: CMakeLists.txt  Uart.cpp  readme.md
Uart/include/: Uart.h
Wifi/: CMakeLists.txt  Wifi.cpp  readme.md
Wifi/include/: Wifi.h
(+114 files in other folders)
