
idf_component_register(SRCS 
                        FileStream.cpp
                        
                        INCLUDE_DIRS
                            include
                        
                        REQUIRES 
                        "vfs"
                        "fatfs"

                        )