
idf_component_register(SRCS 
                            Sdcard.cpp
                        
                        INCLUDE_DIRS
                            include
                        
                         REQUIRES 
                            vfs
                            fatfs
                            FileStream
                        )

